# friendsapp

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  copilot-instructions.md  deploy.sh  docker-compose.yml  friendsapp-api.http  note.md  pyproject.toml  railway.toml  requirements.txt  start.sh  startup.sh
core/: settings.py  urls.py
infrastructure/: main.tf  terraform.tfvars.example  variables.tf
profiles/: admin.py  models.py  serializers.py  urls.py  views.py
profiles/management/commands/: populate_profiles.py
profiles/migrations/: 0001_initial.py
